<package>
	<name>cob_map_accessibility_analysis</name>
	<version>0.1.0</version>
	<description>
		cob_map_accessibility_analysis receives the map from navigation as well as obstacles and inflates_obstacles topics to assemble a common obstacle map. Upon request, this node checks the accessibility of poses within thin map by (i) checking whether the pose itself is free and by (ii) checking whether there is a closed path from robot to the goal pose.
	</description>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_map_accessibility_analysis</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>libopencv-dev</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>message_filters</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>cob_3d_mapping_msgs</build_depend>
	<!--build_depend>cob_3d_mapping_common</build_depend-->
	<build_depend>message_generation</build_depend>

	<build_depend>boost</build_depend>
	<build_depend>libpcl-all-dev</build_depend>

	<run_depend>libopencv-dev</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>message_filters</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>cob_3d_mapping_msgs</run_depend>
	<!--run_depend>cob_3d_mapping_common</run_depend-->
	<run_depend>message_runtime</run_depend>

	<run_depend>boost</run_depend>
	<run_depend>libpcl-all</run_depend>

</package>
