<?xml version="1.0"?>
<package format="2">
  <name>cob_linear_nav</name>
  <version>0.6.6</version>
  <description>
    cob_linear_nav provides a simple navigation instrument driving on a linear path from current position to goal without any planning or obstacle avoidance capabilites.
    Obstacle avoidance should be carried out in other package, e.g. <a href="http://ros.org/wiki/cob_collision_velocity_filter">cob_collision_velocity_filter</a>.
  </description>

  <maintainer email="fez@ipa.fraunhofer.de">Felix Zeltner</maintainer>
  <author email="mig@ipa.fraunhofer.de">Matthias Gruhler</author>
  <author>Philipp Koehler</author>

  <license>Apache 2.0</license>
  <url>http://ros.org/wiki/cob_linear_nav</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cob_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

</package>
