<?xml version="1.0"?>
<package format="2">
  <name>cob_mapping_slam</name>
  <version>0.6.12</version>
  <description>
    cob_mapping_slam holds launch files for running SLAM using the <a href="http://ros.org/wiki/gmapping">gmapping</a> package.
  </description>

  <maintainer email="fez@ipa.fraunhofer.de">Felix Zeltner</maintainer>
  <author email="mig@ipa.fraunhofer.de">Matthias Gruhler</author>

  <license>Apache 2.0</license>
  <url>http://ros.org/wiki/cob_mapping_slam</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_navigation_global</exec_depend>
  <exec_depend>gmapping</exec_depend>

  <test_depend>cob_supported_robots</test_depend>
  <test_depend>roslaunch</test_depend>

</package>

