<package>
  <name>cob_navigation</name>
  <version>0.6.1</version>
  <description>
    The cob_navigation stack provides different navigation packages for <a href="http://ros.org/wiki/care-o-bot">Care-O-bot</a>.
  </description>

  <maintainer email="mig@ipa.fraunhofer.de">Matthias Gruhler</maintainer>
  <author email="mig@ipa.fraunhofer.de">Matthias Gruhler</author>
  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_navigation</url>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>cob_linear_nav</run_depend>
  <run_depend>cob_mapping_slam</run_depend>
  <run_depend>cob_navigation_config</run_depend>
  <run_depend>cob_navigation_global</run_depend>
  <run_depend>cob_navigation_local</run_depend>
  <run_depend>cob_navigation_slam</run_depend>
  <run_depend>cob_scan_unifier</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
