<?xml version="1.0"?>
<package format="2">
  <name>cob_navigation</name>
  <version>0.6.10</version>
  <description>
    The cob_navigation stack provides different navigation packages for <a href="http://ros.org/wiki/care-o-bot">Care-O-bot</a>.
  </description>

  <maintainer email="fez@ipa.fraunhofer.de">Felix Zeltner</maintainer>

  <license>Apache 2.0</license>
  <url>http://ros.org/wiki/cob_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_linear_nav</exec_depend>
  <exec_depend>cob_mapping_slam</exec_depend>
  <exec_depend>cob_map_accessibility_analysis</exec_depend>
  <exec_depend>cob_navigation_config</exec_depend>
  <exec_depend>cob_navigation_global</exec_depend>
  <exec_depend>cob_navigation_local</exec_depend>
  <exec_depend>cob_navigation_slam</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
