<?xml version="1.0"?>
<package format="2">
  <name>cob_navigation_slam</name>
  <version>0.6.7</version>
  <description>
    This package provides launch files for running  <a href="http://ros.org/wiki/care-o-bot">Care-O-bot</a> with the  <a href="http://ros.org/wiki/gmapping">gmapping</a> slam package of ROS. It further provides the usual navigation functionalities as provided by the <a href="http://ros.org/wiki/move_base">move_base</a> node.
  </description>

  <maintainer email="fez@ipa.fraunhofer.de">Felix Zeltner</maintainer>
  <author email="fmw@ipa.fraunhofer.de">Florian Weisshardt</author>

  <license>Apache 2.0</license>
  <url>http://ros.org/wiki/cob_navigation_slam</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_navigation_config</exec_depend>
  <exec_depend>cob_navigation_global</exec_depend>
  <exec_depend>cob_mapping_slam</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>cob_supported_robots</test_depend>
  <test_depend>roslaunch</test_depend>

</package>
